packages/typ/tests/fixtures/diagnostics/0615_functor_call_abstract_function_bool_07.ml.expected
File "0615_functor_call_abstract_function_bool_07.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0615_functor_call_abstract_function_bool_07 is not a valid module name.

File "0615_functor_call_abstract_function_bool_07.ml", line 7, characters 15-19:
7 |   let y = X.id true
                   ^^^^
Error: The constructor true has type bool
       but an expression was expected of type X.t
